chore: create add products swagger
